tests/cases/borrowing/errors/borrow-control-flow-mismatch.ari
fn main() -> i64 {
  var left = 1;
  var right = 2;
  let cond = true;
  let bad: ref i64 = if cond {
    ref left
  } else {
    ref right
  };
  return 0;
}
